<resources>
    <string name="app_name">AsilApp</string>
    <string name="lingua_prompt" translatable="false">Lingua</string>
    <string name="tipoUtente_prompt" translatable="false">Vista</string>
    <string name="genere_prompt" translatable="false">Genere</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pw_contenitore1">Inserisci la password del contenitore per aprirlo</string>
    <string name="pw_contenitore2">Inserisci il codice la password del contenitore per aprirlo</string>
    <string name="emailUtente">Email</string>
    <string name="titleEmailFragment">Inserisci l\'email dell\'utente</string>
    <string name="pw_contenitore_codice">Codice</string>
    <string name="pw_contenitore_password">Password</string>
    <string name="pw_contenitore_invia">Invia</string>
    <string name="scansione">Apri il contenitore biomedicale</string>
    <string name="mainActivity_apri_contenitore">Apri contenitore</string>
    <string name="mainActivity_mostra_qr_code">Mostra codice QR</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="accedi">Accedi</string>
    <string name="non_ancora_registrato">Non sei ancora registrato? Clicca qui!</string>
    <string name="nuova_password">nuova password</string>
    <string name="password" translatable="false">Password</string>
    <string name="Login" translatable="false">Login</string>
    <string name="Login_staff" >Login Staff</string>
    <string name="email" translatable="false">Email</string>
    <string name="SignUp">Registrazione utente</string>
    <string name="Nome">Nome</string>
    <string name="Cognome">Cognome</string>
    <string name="Genere">Genere</string>
    <string name="Cellulare">Cellulare</string>
    <string name="Data_di_nascita">Data di nascita</string>
    <string name="Luogo_nascita">Luogo di nascita</string>
    <string name="Conferma">Conferma</string>
    <string name="StaffSignup">Registrati</string>
    <string name="CentroAccoglienza">Centro di accoglienza</string>
    <string name="GiaRegsitrato">Sei già registrato? Accedi</string>
    <string name="Spese">Spese</string>
    <string name="Saldo">Saldo</string>
    <string name="Analisi">Analisi</string>
    <string name="refresh">aggiorna</string>
    <string name="BilancioBudget" translatable="false">Budget: </string>
    <string name="Spesasettimana">Spesa settimanale: </string>
    <string name="SpesaMensile">Spesa mensile: </string>
    <string name="userWarnBudget">Il saldo si aggiornerà ogni mese. La quota mensile spettante è di 60.00€.</string>
    <string name="prodotto">prodotto</string>
    <string name="prezzo">prezzo</string>
    <string name="AggiungiSpesa">Aggiungi nuova spesa</string>
    <string name="seleziona">Seleziona pdf</string>
    <string name="Nessunfile">Nessun file selezionato</string>
    <string name="Upload">Carica pdf</string>
    <string name="Indirizzo">Indirizzo</string>
    <string name="Sito_web">Sito web</string>
    <string name="Descrizione">Servizi</string>
    <string name="Telefono">Telefono</string>
    <string name="Chart">Analisi spese mensili</string>
    <string name="SpeseGraf">Spese</string>
    <string name="UtenteGen">Utente generico:</string>
    <string name="Utentedon">Utente donna:</string>
    <string name="CaricaVid">Carica video</string>
    <string name="Prezzo">Prezzo: </string>
    <string name="Prodotto">Prodotto: </string>
    <string name="Tipo">Tipo: </string>
    <string name="LatLong">Latitudine:     \n Longitudine:      </string>
    <string name="ClickMap">Tocca un punto della mappa per salvare la posizione del tuo centro</string>
    <string name="Demo">Utente Demo</string>
    <string name="Logout">Esci</string>
    <string name="ScegliUt">Scegli utente</string>
    <string name="RichiedenteAsilo">Richiedente Asilo</string>
    <string name="Profilo">Profilo</string>
    <string name="benvenuto">Benvenuto, </string>
    <string name="mappa_string">Mappa</string>
    <string name="posizione_salvata">"Coordinate salvate!"</string>
    <string name="select_pdf">"Seleziona un pdf"</string>
    <string name="upload_pdf">"File caricato!"</string>
    <string name="download_manager">"Download Manager non disponibile"</string>
    <string name="video_uploaded">"Video caricato con successo!"</string>
    <string name="failed_upload">"Errore: video non caricato!"</string>
    <string name="deleted_video">"Video eliminato"</string>
    <string name="deleted_pdf">"Pdf eliminato"</string>
    <string name="media" translatable="false">Media</string>
    <string name="cartella_clinica">Cartella clinica</string>
    <string name="info_centro">Il mio centro</string>
    <string name="QrCode">Il mio QR Code</string>
    <string name="centroString">Centro</string>
    <string name="aggiungi_utente">Registra nuovo utente</string>
    <string name="scansionaQRCode">Scansiona QR Code utente</string>
    <string name="Benvenuto_Main">Benvenuto!</string>
    <string name="Dati">Dati</string>
    <string name="Video">Video</string>
    <string name="Attenzione">Attenzione</string>
    <string name="FilegiaCaricato">Questo file è stato già caricato! Elimina il vecchio prima di continuare!</string>
    <string name="EliminaFile">Elimina file</string>
    <string name="VuoiEliminare">Sei sicuro di voler eliminare questo file?</string>
    <string name="Delete">Elimina</string>
    <string name="Cancel">Annulla</string>
    <string name="LatiGeo">Latitudine</string>
    <string name="LongiGeo">Longitudine</string>
    <string name="Passwordcaratter">La password deve essere almeno di 6 caratteri!</string>
    <string name="Riempicampi">Riempire tutti i campi!</string>
    <string name="Emailinvalid">Email non valida!</string>
    <string name="Cellulareinvalid">Cellulare non valido!</string>
    <string name="IncorrectPass">Password non corretta!</string>
    <string name="EmailnonEsiste">Email inesistente!</string>
    <string name="ResetPass">Inserisci Email prima di resettare la password!</string>
    <string name="PermessiR">Non hai i permessi da richiedente asilo</string>
    <string name="PermessiS">Non hai i permessi da staff</string>
    <string name="PrezzoAlto">Il prezzo è troppo alto!</string>
    <string name="VuoiUscire">Sei sicuro di voler uscire?</string>
    <string name="Si">Sì</string>
    <string name="Caricamento">Caricamento in corso</string>
    <string name="email_richiesta">Email obbligatoria!</string>
    <string name="password_richiesta">Password obbligatoria!</string>
    <string name="login_con_successo">Autenticazione eseguita con successo!</string>
    <string name="connessione">Nessuna connessione ad internet.</string>
    <string name="invio_reset">L\'email con il reset della password è stata inoltrata.Controlla in posta</string>
    <string name="resetFallito">Non è stata inoltrata l\'email con il reset della password.</string>
    <string name="erroreRecupero">Errore nel recupero del documento:</string>
    <string name="loginFallito">Autenticazione fallita.L\'utente è inesistente</string>
    <string name="autenticaFallito">Autenticazione fallita!</string>
    <string name="riempiCampi">I campi email e password non possono essere vuoti.</string>
    <string name="userSconosciuto">Ruolo utente non riconosciuto.</string>
    <string name="NotFound">Utente non ritrovato.</string>
    <string name="fallitoRitrovamento">Impossibile recuperare il ruolo utente.</string>
    <string name="passAggiorna">Password aggiornata con successo.</string>
    <string name="aggiornaFail">Aggiornamento password in Firestore fallito.</string>
    <string name="registraCompletato">Registrazione completata con successo!</string>
    <string name="registrazione_fallita">Registrazione fallita!</string>
    <string name="not_connection">Nessuna connesione ad internet.</string>
    <string name="parametri_medici">Parametri medici</string>
    <string name="condividi_su">Condividi su…</string>
    <string name="salute">Salute</string>
    <string name="scheda_anagrafica">Scheda anagrafica</string>
    <string name="profilo">Il mio Profilo</string>
    <string name="app_utile">Trovi che l’app sia utile?</string>
    <string name="punteggio_stelle">Valuta l’app lasciando un punteggio da 1 a 5 stelle (da pessimo a eccellente)</string>
    <string name="conferma_valutazione">Conferma Valutazione</string>
    <string name="salva">Salva</string>
    <string name="noChartData">Nessuna misurazione di </string>
    <string name="noParametri">Non hai ancora effettuato la tua prima visita...</string>
    <string name="anagrafica_utente">Anagrafica Utente</string>
    <string name="apri_contenitore">Apri contenitore</string>
    <string name="temperatura">Temperatura</string>
    <string name="frequenza_cardiaca">Frequenza cardiaca</string>
    <string name="pressione">Pressione</string>
    <string name="saturazione">Saturazione</string>
    <string name="glicemia">Glicemia</string>
    <string name="valutaApp">Valuta l\'app</string>
    <string name="DeleteSuccess">File eliminato con successo</string>
    <string name="erroreDB">Errore nella rimozione del file dal database:</string>
    <string name="erroreStorage">Errore nella rimozione del file dall\'archivio:</string>
    <string name="fileNotFound">File non trovato nel database</string>
    <string name="erroreRicerca">" Errore durante la ricerca del file:"</string>
    <string name="errStaffcollection">Errore durante il recupero del documento dalla raccolta Staff:</string>
    <string name="datiAggiornati">I dati sono stati aggiornati!</string>
    <string name="failURL">Impossibile ottenere l\'URL di download:</string>
    <string name="failFetch">Impossibile recuperare i dati:</string>
    <string name="selectFile">Seleziona un file</string>
    <string name="errore_ricerca">Errore nella ricerca del documento</string>
    <string name="reviewAggiornata">Recensione aggiornata con successo!</string>
    <string name="reviewFallita">Errore nell\'aggiornamento della recensione</string>
    <string name="review_saved">Recensione salvata con successo!</string>
    <string name="errorSavingReview">Errore nel salvataggio della recensione</string>
    <string name="no_fetchData">Impossibile recuperare i dati dell\'utente</string>
    <string name="noListVideo">Impossibile elencare i video</string>
    <string name="new_medicalFolder">Nuova cartella clinica creata con successo!</string>
    <string name="errorUpdatefolder">Errore nella creazione della cartella clinica</string>
    <string name="successUpdate">Cartella clinica aggiornata con successo!</string>
    <string name="errorUpdate">Errore nell\'aggiornamento della cartella clinica</string>
    <string name="sensore_disponibile">Sensore Heart Rate disponibile sul tuo dispositivo!</string>
    <string name="sensore_non_disponibile">Sensore Heart Rate non disponibile sul dispositivo…</string>
    <string name="istruzioni_sensore">Poggia il dito sul sensore per misurare la frequenza cardiaca</string>
    <string name="detected_heart_rate">Valore di \'Frequenza cardiaca\' rilevato con successo!</string>
    <string name="prima_visita">Benvenuto! Questa è la tua prima visita.</string>
    <string name="errore_parametri_medici_s">Errore durante la verifica del documento</string>
    <string name="parametri_medici_aggiornati">Parametri medici aggiornati con successo!</string>
    <string name="errore_parametri_medici_aggiornati">Errore nell\'aggiornamento dei parametri medici</string>
    <string name="parametri_medici_creati">Dati raccolti nella visita salvati con successo!</string>
    <string name="errore_parametri_medici_creati">Errore nel salvataggio dei parametri medici di questa visita…</string>
    <string name="errore_condivisione">Non ci sono dati da condividere</string>
    <string name="recupero_password">Recupero Password</string>
</resources>