<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeR">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >



    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#fe9e50"
        app:title="AsilApp"
        app:titleTextColor="#FFFFFF"
        app:menu="@menu/menu_bar"/>

    <TextView
        android:id="@+id/Benvenuto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/benvenuto"
        android:textSize="16sp"
        android:layout_marginTop="60dp"
        android:padding="25dp"
        android:textStyle="normal">
    </TextView>

    <Button
        android:id="@+id/generaQrRichiedente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnMedia"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="-311dp"
        android:layout_marginEnd="191dp"
        android:backgroundTint="#076AEC"
        android:text="@string/QrCode" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/profilllle_removebg_preview"

        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/Benvenuto"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="00dp"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/btnInformazioniCentro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Benvenuto"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="135dp"
        android:text="@string/info_centro" />

    <Button
        android:id="@+id/btnApriMappa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnInformazioniCentro"
        android:layout_alignParentStart="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="75dp"
        android:text="@string/mappa_string" />

    <FrameLayout
        android:id="@+id/frameLayoutQrCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-138dp" />


    <Button
        android:id="@+id/btnMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnApriMappa"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-48dp"
        android:layout_marginEnd="43dp"
        android:text="@string/media" />

    <Button
        android:id="@+id/btnSaluteR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/generaQrRichiedente"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="325dp"
        android:text="@string/cartella_clinica" />

</RelativeLayout>
</ScrollView>