<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/white"
   >


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fe9e50"
        app:title="AsilApp"
        app:titleTextColor="#FFFFFF" />



    <TextView
        android:id="@+id/signupText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_staff"
        android:layout_marginTop="45dp"
        android:shadowColor="#4A4A49"
        android:shadowDx="3"
        android:shadowRadius="3"
        android:shadowDy="2"
        android:textAlignment="center"
        android:textColor="#076aec"
        android:textSize="38dp" />


    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="521dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="35dp">


        <LinearLayout

            android:layout_width="326dp"
            android:layout_height="144dp"

            android:layout_marginStart="0dp"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/email_icon" />

            <EditText
                android:id="@+id/Logemail"
                android:layout_width="238dp"
                android:layout_height="55dp"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="326dp"
            android:layout_height="62dp"

            android:layout_marginStart="0dp"
            android:layout_marginTop="-47dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/password_icon" />

            <EditText
                android:id="@+id/Logpassword"
                android:layout_width="238dp"
                android:layout_height="55dp"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16dp" />


        </LinearLayout>

        <TextView
            android:id="@+id/password_persa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_persa"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="48dp"
            android:onClick="Recupero_password"
            android:padding="8dp"

            android:text="@string/password_dimenticata"
            android:textAlignment="textStart"
            android:textColor="#076AEB"
            android:textSize="15sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#076AEC"
            android:text="@string/accedi"
            android:textSize="15sp"
            app:cornerRadius="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginTop="140dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notyetRegistered"
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="30dp"
                android:onClick="Recupero_password"
                android:padding="8dp"
                android:text="@string/non_ancora_registrato"
                android:textAlignment="center"
                android:textColor="#076AEB"
                android:textSize="15sp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>




</LinearLayout>
</ScrollView>