<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/white"
   >


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fe9e50"
        app:title="AsilApp"
        app:titleTextColor="#FFFFFF" />



    <TextView
        android:id="@+id/signupText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recupero_password"
        android:textAlignment="center"
        android:layout_marginTop="45dp"

        android:textColor="#504F4F"
        android:textSize="25sp"
        android:textStyle="normal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="35dp">


        <LinearLayout

            android:layout_width="326dp"
            android:layout_height="144dp"

            android:layout_marginStart="0dp"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/email_icon" />

            <EditText
                android:id="@+id/ResetEmail"
                android:layout_width="238dp"
                android:layout_height="55dp"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="326dp"
            android:layout_height="62dp"

            android:layout_marginStart="0dp"
            android:layout_marginTop="-47dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/password_icon" />

            <EditText
                android:id="@+id/ResetPassword"
                android:layout_width="238dp"
                android:layout_height="55dp"
                android:drawablePadding="10dp"
                android:hint="@string/nuova_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16dp" />


        </LinearLayout>

        <Button
            android:id="@+id/UpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:backgroundTint="#076AEC"
            android:text="@string/accedi"
            android:textSize="15sp"
            app:cornerRadius="20dp" />


    </LinearLayout>




</LinearLayout>
</ScrollView>